--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>                  
                         <p class="product-item__question">Чего сидишь? Порадуй котэ, <a href="#" class="product-item__buy">купи.</a></p>
                     </div>
-                    <div class="product-item disabled">
+                    <div class="product-item">
                         <div class="product-item__card">
                             <p class="product-item__description">Сказочное заморское яство</p>
                             <h3 class="product-item__title"><span class="product-item__title-size">Нямушка</span><br>
